--- a/main.tex
+++ b/main.tex
@@ -29,15 +29,15 @@
 \input{./Tex/global_vars.tex}
 
 %note introduction should include a note about the microboone detector environment (broken wires, noise, etc)
-\input{./Tex/introduction.tex}
+% \input{./Tex/introduction.tex}
 
-\input{./Tex/technique.tex}
+% \input{./Tex/technique.tex}
 
 \input{./Tex/MC_singlemuon_performance.tex}
 
-\input{./Tex/data_performance.tex}
+% \input{./Tex/data_performance.tex}
 
-\input{./Tex/conclusions.tex}
+% \input{./Tex/conclusions.tex}
 
 
 %%%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%
