--- a/Tex/data_performance.tex
+++ b/Tex/data_performance.tex
@@ -8,9 +8,11 @@ reference CCInclusive technote, good runs list, no EXT data used only BNB. cosmi
 \begin{enumerate}
 \item describe the event selection, 2 tracks at vertex, etc etc.
 \item state we take tracks fully contained in fiducial volume, longer than 1 meter
-\item state that broken tracks are still present so we do hand scanning
+\item state that broken tracks and MIDs are still present so we do hand scanning
 \item describe hand scanning, include pictures of event displays like Figure \ref{bad_evd_fig_1}.
+\item numbers: from 5e19 POT ended up with X events, of those 598 have the fully contained longer than 1 meter track, and 396 are deemed well-reconstructed after handscanning.
 \end{enumerate}
+
 
 \begin{figure}[h!]
 \begin{center}
@@ -20,9 +22,73 @@ reference CCInclusive technote, good runs list, no EXT data used only BNB. cosmi
 \label{bad_evd_fig_1}
 \end{figure}
 
-\subsection{Performance}
-\begin{enumerate}
-\item plot of scattering angle / RMS (RMS from MCS energy, or range energy). hopefully this agrees with the corresponding plot in the MC section. maybe put them on the same plot?
-\item plot of MCS energy vs range
-\item energy resolution in terms of range energy. hopefully this agrees with the corresponding plot in the MC section. maybe put them on the same plot?
-\end{enumerate}
+\subsubsection{MCS Energy Validation}\label{MCS_Energy_Validation_DataRecoTrack_section}
+For this sample of reconstructed tracks, the trajectory points only of each track is used as input to the MCS code, described in Section XXX. The resulting MCS energy versus range-based energy without any additional hand-scan reconstruction quality checks can be seen in Figure \ref{MCS_range_energy_DataRecoTrack_nohandscan_fig}. The off-diagonal visible in this figure (where MCS energy greatly overestimates range energy) is caused by poor track reconstruction (truncated tracks) and MIDs. Figure \ref{MCS_range_energy_RecoTrack_withandwithouthandscan_fig} divides Figure \ref{MCS_range_energy_DataRecoTrack_nohandscan_fig} into those events which are handscanned as having poorly reconstructed or obviously MID'd tracks, and those which are well reconstructed. It can be seen that hand-scanning tends to remove the off-diagonal and therefore improve the MCS energy resolution.\\
+
+In order to compute a bias and a resolution, Figure \ref{MCS_range_energy_DataRecoTrack_fig} is sliced in bins of range energy and a histogram of the fractional energy difference ($\frac{E_{MCS} - E_{range}}{E_{range}}$) is created for each bin. This distribution is shown for two representative bins in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_slices_fig}. The mean of each distribution is used to compute a bias a function of range, while the standard deviation of each distribution is used to compute a resolution. The bias and resolution for this energy reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. XXX CHECK THIS XXX This figure indicates a bias in the MCS energy resolution on the order of a few percent, with a resolution that decreases from about 18\% for contained {\sc MCTracks} with true total energy around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 10\% for contained {\sc MCTracks} with true total energy greater than 0.8 GeV (which corresponds to a length of about 3.1 meters).
+
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[width=100mm]{Figures/MCS_range_comparison_DataRecoTracks_nohandscan.png}
+\end{center}
+\caption{\textit{MCS computed energy versus range energy for the selected neutrino-induced fully contained muon sample in data without any additional handscanning to check for reconstruction quality. The off-diagonal where MCS energy greatly overestimates range energy is caused by poor track reconstruction (truncated tracks) and MIDs.}}
+\label{MCS_range_energy_DataRecoTrack_nohandscan_fig}
+\end{figure}
+
+\begin{figure}
+\centering
+\mbox{
+	\subfigure[\textit{The subset of events in Figure \ref{MCS_range_energy_DataRecoTrack_nohandscan_fig} which were hand-scanned as having poor reconstruction quality or obvious MID topologies.}]
+	{\includegraphics[width=75mm]{Figures/MCS_range_energy_DataRecoTracks_badhandscan.png}}
+	\quad
+	\subfigure[\textit{The subset of events in Figure \ref{MCS_range_energy_DataRecoTrack_nohandscan_fig} which were hand-scanned as having good reconstruction quality or obvious MID topologies.}\label{MCS_range_energy_DataRecoTrack_fig}]
+	{\includegraphics[width=75mm]{Figures/MCS_range_energy_DataRecoTracks_goodhandscan.png}}
+	}
+\caption{\textit{MCS computed energy versus range energy for the selected neutrino-induced fully contained muon sample in data hand-scanned as having poorly reconstructed tracks (left) and well reconstructed tracks (right).}}
+\label{MCS_range_energy_RecoTrack_withandwithouthandscan_fig}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\mbox{
+	\subfigure[\textit{Fractional energy difference between 0.35 and 0.53 GeV range energy.}]
+	{\includegraphics[width=50mm]{Figures/MCS_range_resolution_DataRecoTracks_slice1.png}}
+	\quad
+	\subfigure[\textit{Fractional energy difference between 0.90 and 1.08 GeV range energy.}]
+	{\includegraphics[width=50mm]{Figures/MCS_range_resolution_DataRecoTracks_slice2.png}}
+	}
+\caption{\textit{Fractional energy difference for a few representative bins of range energy derived from Figure \ref{MCS_range_energy_DataRecoTrack_fig}.}}
+\label{MCS_range_bias_resolution_DataRecoTrack_slices_fig}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\mbox{
+	\subfigure[\textit{MCS energy bias as a function of range energy.}]
+	{\includegraphics[width=75mm]{Figures/MCS_range_bias_DataRecoTracks.png}}
+	\quad
+	\subfigure[\textit{MCS energy resolution as a function of range energy.}]
+	{\includegraphics[width=75mm]{Figures/MCS_range_resolution_DataRecoTracks.png}}
+	}
+\caption{\textit{MCS energy bias and resolution as a function of range energy for the selected, well reconstructed neutrino-induced muons in {\ub} data.}}
+\label{MCS_range_bias_resolution_DataRecoTrack_fig}
+\end{figure}
+
+
+
+\subsubsection{Highland Validation}\label{Highland_Validation_DataRecoTrack_section}
+For a given track segment energy and length, 98\% of the angular scatter deviations should be gaussian with an RMS described by the Highland equation (Equation \ref{highland_eqtn}), while the remaining 2\% are larger angle Rutherford scatters [XXX source]. Therefore, a histogram of track segment angular deviations divided by the RMS predicted by the Highland equation should be gaussian with a width of unity. In this section, we validate this claim.\\
+
+For each 20cm segment of each reconstructed track in this single muon sample, the energy of the muon at the start of that segment is estimated by taking the computed MCS energy and subtracting out energy lost in the track upstream of the start of this segment, assuming the track was minimally ionizing (depositing 2.2 MeV per centimeter of track). This energy, along with the segment length, is converted into an expected RMS angular deviation by way of Equation \ref{highland_eqtn}. For each consecutive pairs of segments, the angular scatter in milliradians divided by the Highland expected RMS in millradians is an entry in the histogram shown in Figure \ref{Highland_validation_DataRecoTracks_fig}. From this figure we can see that the Highland formula is valid for well reconstructed tracks in data.
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[width=100mm]{Figures/Highland_validation_DataRecoTracks_goodhandscan.png}
+\end{center}
+\caption{\textit{20cm segment angular deviations divided by expected Highland RMS for the sample of well reconstructed, neutrino induced muons in {\ub} data.}}
+\label{Highland_validation_DataRecoTracks_fig}
+\end{figure}
+
