updates, section looking at MC BNB stuff

--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 
 \input{./Tex/MC_singlemuon_performance.tex}
 
+\input{./Tex/MC_neutrino_performance.tex}
 \input{./Tex/data_performance.tex}
 
 \input{./Tex/conclusions.tex}
