--- a/Tex/data_performance.tex
+++ b/Tex/data_performance.tex
@@ -25,7 +25,7 @@ reference CCInclusive technote, good runs list, no EXT data used only BNB. cosmi
 \subsection{MCS Energy Validation}\label{MCS_Energy_Validation_DataRecoTrack_section}
 For this sample of reconstructed tracks, the trajectory points only of each track is used as input to the MCS code, described in Section XXX. The resulting MCS energy versus range-based energy without any additional hand-scan reconstruction quality checks can be seen in Figure \ref{MCS_range_energy_DataRecoTrack_nohandscan_fig}. The off-diagonal visible in this figure (where MCS energy greatly overestimates range energy) is caused by poor track reconstruction (truncated tracks) and MIDs. Figure \ref{MCS_range_energy_RecoTrack_withandwithouthandscan_fig} divides Figure \ref{MCS_range_energy_DataRecoTrack_nohandscan_fig} into those events which are handscanned as having poorly reconstructed or obviously MID'd tracks, and those which are well reconstructed. It can be seen that hand-scanning tends to remove the off-diagonal and therefore improve the MCS energy resolution.\\
 
-In order to compute a bias and a resolution, Figure \ref{MCS_range_energy_DataRecoTrack_fig} is sliced in bins of range energy and a histogram of the fractional energy difference ($\frac{E_{MCS} - E_{range}}{E_{range}}$) is created for each bin. This distribution is shown for two representative bins in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_slices_fig}. The mean of each distribution is used to compute a bias a function of range, while the standard deviation of each distribution is used to compute a resolution. The bias and resolution for this energy reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. XXX CHECK THIS XXX This figure indicates a bias in the MCS energy resolution on the order of a few percent, with a resolution that decreases from about 18\% for contained {\sc MCTracks} with true total energy around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 10\% for contained {\sc MCTracks} with true total energy greater than 0.8 GeV (which corresponds to a length of about 3.1 meters).
+In order to compute a bias and a resolution, Figure \ref{MCS_range_energy_DataRecoTrack_fig} is sliced in bins of range energy and a histogram of the fractional energy difference ($\frac{E_{MCS} - E_{range}}{E_{range}}$) is created for each bin. This distribution is shown for two representative bins in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_slices_fig}. The mean of each distribution is used to compute a bias a function of range, while the standard deviation of each distribution is used to compute a resolution. The bias and resolution for this energy reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. This figure indicates a bias in the MCS energy resolution on the order of a few percent, with a resolution that decreases from about 18\% for contained {\sc MCTracks} with true total energy around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 10\% for contained {\sc MCTracks} with true total energy greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This agrees well with the same bias and resolution measurement in simulation shown in Figure \ref{MCS_range_bias_resolution_MCNuRecoTrack_fig}.
 
 
 \begin{figure}[h!]
